fix(search): improve query limit handling and null filtering in search results